Update 'd8dorvv28-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:b69ade54021e65cd183a3cce6d4c940ea989b9e5@sha256:c3eb23ca749001c8be3a5ef7c262074ff173f8628c4e504ae9f64c982746db02

--- a/components/d8dorvv28-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/d8dorvv28-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: d8dorvv28-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:b69ade54021e65cd183a3cce6d4c940ea989b9e5@sha256:c3eb23ca749001c8be3a5ef7c262074ff173f8628c4e504ae9f64c982746db02
+          name: container-image
